--- a/exercise-1.html
+++ b/exercise-1.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
 
 <head>
@@ -15,18 +11,16 @@
 </head>
 
 <body>
-    <div>
-        <h1 class="headline">Have an account? Sign in</h1>
-        <input type="text" placeholder="Username">
-        <input type="text" placeholder="Password">
-        <button type="button">Login</button>
-        <input type="checkbox"> Remember me
+    <div class="loginbox">
+        <h1 class="signin">Have an account? Sign in</h1>
+        <input class="user" type="text" placeholder="Username">
+        <input class="password" type="password" placeholder="Password">
+        <button class="button" type="button">LOGIN</button>
+        <div>
+            <input class="checkbox" type="checkbox">
+            <span>Remember me</span>
+        </div>
     </div>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-    <script src="" async defer></script>
 </body>
 
 </html>
